[gd_scene load_steps=4 format=3 uid="uid://diilrq7w6606l"]

[ext_resource type="Script" path="res://server_browser.gd" id="1_1nm1g"]
[ext_resource type="Script" path="res://lobby_ui.gd" id="1_dbqf3"]
[ext_resource type="PackedScene" uid="uid://cwlxfwi3krsaf" path="res://server_info.tscn" id="4_krl1m"]

[node name="LobbyUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbqf3")

[node name="Host" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 0
offset_left = 135.0
offset_top = 115.0
offset_right = 215.0
offset_bottom = 146.0
text = "Host"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 115.0
offset_right = 508.0
offset_bottom = 146.0
disabled = true
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 189.0
offset_top = 44.0
offset_right = 589.0
offset_bottom = 75.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 40.0
offset_right = 181.0
offset_bottom = 63.0
text = "Name"

[node name="NbPlayers" type="Label" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 118.0
offset_right = 401.0
offset_bottom = 141.0
text = "Nb players : "

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1nm1g")
server_info = ExtResource("4_krl1m")

[node name="Label2" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 696.0
offset_top = 13.0
offset_right = 789.0
offset_bottom = 62.0
text = "Bound to :
listen port : "

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 124.0
offset_top = 204.0
offset_right = 918.0
offset_bottom = 586.0

[node name="Header" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 2
offset_right = 794.0
offset_bottom = 23.0

[node name="Name" type="Label" parent="ServerBrowser/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="IP" type="Label" parent="ServerBrowser/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP
"

[node name="PlayerCount" type="Label" parent="ServerBrowser/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count"

[node name="Join" type="Label" parent="ServerBrowser/Panel/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 33.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="join_game" from="ServerBrowser" to="." method="_on_server_browser_join_game"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
